@@ -120,6 +120,12 @@ Release date: TBA
 
 * Added ``use-sequence-for-iteration``: Emitted when iterating over an in-place defined ``set``.
 
+* ``CodeStyleChecker``
+
+  * Limit ``consider-using-tuple`` to be emitted only for in-place defined ``lists``.
+
+  * Emit ``consider-using-tuple`` even if list contains a ``starred`` expression.
+
 
 What's New in Pylint 2.9.6?
 ===========================
